<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:gravity="end"
        android:paddingRight="24dp"
        android:textColor="@color/expression_text_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_expression"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:gravity="end"
        android:lines="1"
        android:paddingRight="24dp"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />


    <ImageButton
        android:id="@+id/button_remove"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_result"
        android:layout_toEndOf="@id/button_divide"
        android:layout_toRightOf="@id/button_divide"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:textSize="20sp" />


    <Button
        android:id="@+id/button_clear"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_remove"
        android:layout_toEndOf="@id/button_multiply"
        android:layout_toRightOf="@id/button_multiply"
        android:text="@string/clear"
        android:textSize="20sp" />


    <Button
        android:id="@+id/button_left_parentheses"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_clear"
        android:layout_toEndOf="@id/button_subtract"
        android:layout_toRightOf="@id/button_subtract"
        android:text="@string/left_parentheses"
        android:textSize="20sp" />


    <Button
        android:id="@+id/button_right_parentheses"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_left_parentheses"
        android:layout_toEndOf="@id/button_add"
        android:layout_toRightOf="@id/button_add"
        android:text="@string/right_parentheses"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_seven"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_result"
        android:text="@string/seven"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_eight"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_result"
        android:layout_toEndOf="@id/button_seven"
        android:layout_toRightOf="@id/button_seven"
        android:text="@string/eight"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_nine"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_result"
        android:layout_toEndOf="@id/button_eight"
        android:layout_toRightOf="@id/button_eight"
        android:text="@string/nine"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_four"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_seven"
        android:text="@string/four"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_five"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_eight"
        android:layout_alignEnd="@id/button_eight"
        android:layout_alignRight="@id/button_eight"
        android:text="@string/five"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_six"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_nine"
        android:layout_alignEnd="@id/button_nine"
        android:layout_alignRight="@id/button_nine"
        android:text="@string/six"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_one"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_four"
        android:text="@string/one"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_two"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_five"
        android:layout_alignEnd="@id/button_eight"
        android:layout_alignRight="@id/button_eight"
        android:text="@string/two"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_three"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_six"
        android:layout_alignEnd="@id/button_nine"
        android:layout_alignRight="@id/button_nine"
        android:text="@string/three"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_dot"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_one"
        android:text="@string/dot"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_zero"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_two"
        android:layout_alignEnd="@id/button_eight"
        android:layout_alignRight="@id/button_eight"
        android:text="@string/zero"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_equal"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_three"
        android:layout_alignEnd="@id/button_nine"
        android:layout_alignRight="@id/button_nine"
        android:text="@string/equals"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_divide"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button_nine"
        android:layout_toEndOf="@id/button_nine"
        android:layout_toRightOf="@id/button_nine"
        android:text="@string/divide"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_multiply"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button_six"
        android:layout_toEndOf="@id/button_six"
        android:layout_toRightOf="@id/button_six"
        android:text="@string/multiply"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_subtract"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button_three"
        android:layout_toEndOf="@id/button_three"
        android:layout_toRightOf="@id/button_three"
        android:text="@string/minus"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_add"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button_equal"
        android:layout_toEndOf="@id/button_equal"
        android:layout_toRightOf="@id/button_equal"
        android:text="@string/plus"
        android:textSize="20sp" />
</RelativeLayout>